--- a/ConvexHull_Project/ConvexHull_Project/.gitignore
+++ b/ConvexHull_Project/ConvexHull_Project/.gitignore
@@ -7,3 +7,6 @@
 /ConvexHull_Test.class
 /Point.class
 /QuickHull.class
+/Shortest_Path_Around.class
+/Shortest_Path_Around_Test.class
+/ConvexHullProject$6.class
