Add new visualizer

--- a/ConvexHull_Project/ConvexHull_Project/.gitignore
+++ b/ConvexHull_Project/ConvexHull_Project/.gitignore
@@ -10,3 +10,16 @@
 /Shortest_Path_Around.class
 /Shortest_Path_Around_Test.class
 /ConvexHullProject$6.class
+/visualSoln.class
+/VisualSoln.class
+/test.class
+/VisualSoln$states.class
+/VisualSoln$States.class
+/ConvexHullVisualizer.class
+/ConvexHullVisualizer$1.class
+/ConvexHullVisualizer$2.class
+/ConvexHullVisualizer$3.class
+/ConvexHullVisualizer$4.class
+/ConvexHullVisualizer$5.class
+/ConvexHullVisualizer$6.class
+/ConvexHullVisualizer$States.class
