WIP: Use our algorithms in the steps visualizer

--- a/ConvexHull_Project/ConvexHull_Project/.gitignore
+++ b/ConvexHull_Project/ConvexHull_Project/.gitignore
@@ -23,3 +23,9 @@
 /ConvexHullVisualizer$5.class
 /ConvexHullVisualizer$6.class
 /ConvexHullVisualizer$States.class
+/ConvexHullVisualizerNew.class
+/ConvexHullVisualizerNew$1.class
+/ConvexHullVisualizerNew$2.class
+/ConvexHullVisualizerNew$3.class
+/ConvexHullVisualizerNew$4.class
+/ConvexHullVisualizerNew$States.class
